--- a/kadai008/kadai_008.html
+++ b/kadai008/kadai_008.html
@@ -67,6 +67,8 @@
          <h3>SAMURAIが新しい動画をリリース</h3>
           <p>SAMURAI公式YouTubeで新しい動画がリリースされました。<br>動画の内容はHTML/CSSの解説です。</p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo?si=2qywwaIvDG4ltVfA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </section>
+</article>
  </main>
     </body>
     <footer>
